everything after the first whitespace character following AUTHINFO
USER/PASS, up to, but not including, the final CRLF, as the
username/password, in conformity with S<RFC 4643>.

=item *

The syntax of message-IDs is now based on S<RFC 5536> (USEFOR)
instead of S<RFC 1036>.  The major change is that quoted-pairs
have been removed from the syntax.

=item *

Case-insensitive matches are now used for distributions, path identities,
IMAP commands, header names, and control commands.  (Newsgroups are still
matched case-sensitively.)  Message-IDs are case-sensitively matched,
except for history hashes.

=item *

The new Archive:, Archive-At:, Comments:, and Summary: header fields
defined in S<RFC 5064> and S<RFC 5536> can be used in B<innd> filters.
B<nnrpd> now checks at injection time that an article does not contain an
Injection-Info: header, that an Injection-Date: header (if provided) is
valid, and that the Path: header does not contain C<.POSTED>.  Note that the
generation of these two injection fields and the update of the Path: field
for locally posted articles will only be for the next major release of INN.

=item *

LIST SUBSCRIPTIONS recognizes an optional argument:  a wildmat
can now be specified to restrict the results of this command
to specific newsgroups.

=item *

A new LIST variant named COUNTS is supported by B<nnrpd>:  LIST COUNTS
is a combination of LIST ACTIVE and GROUP.  It returns the same
result as LIST ACTIVE except that the number of articles in a
newsgroup is inserted before its status.

=item *

A new check has been added to F<newsfeeds> entries:  C<Aj>, when present,
adds the capability to feed articles accepted and filed in C<junk> (due to
I<wanttrash>) to peers based on their F<newsfeeds> feed patterns applied to
the Newsgroups: header as though the article were accepted and all those
groups were locally carried.  This is useful if you want to run INN with
a minimal F<active> file and propagate all posts.  Thanks to Andrew Gierth